; ModuleID = '/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/dvorak2space/extr_keymap.c_slash_finished.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/keyboards/planck/keymaps/dvorak2space/extr_keymap.c_slash_finished.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@KC_SLSH = common dso_local global i32 0, align 4
@KC_NUBS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @slash_finished(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i32 @cur_dance(i32* %6)
  store i32 %7, i32* %5, align 4
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %17 [
    i32 128, label %9
    i32 129, label %14
  ]

9:                                                ; preds = %2
  %10 = call i32 (...) @clear_mods()
  %11 = call i32 (...) @clear_weak_mods()
  %12 = load i32, i32* @KC_SLSH, align 4
  %13 = call i32 @tap_code(i32 %12)
  br label %17

14:                                               ; preds = %2
  %15 = load i32, i32* @KC_NUBS, align 4
  %16 = call i32 @tap_code(i32 %15)
  br label %17

17:                                               ; preds = %14, %2, %9
  ret void
}

declare dso_local i32 @cur_dance(i32*) #1

declare dso_local i32 @clear_mods(...) #1

declare dso_local i32 @clear_weak_mods(...) #1

declare dso_local i32 @tap_code(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
